--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,12 +1,21 @@
-.site-menu {
+.main-nav__list {
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
-.site-menu__link {
+.main-nav__link {
     color: $black;
     text-decoration: none;
     letter-spacing: 0;
+    font-weight: 700;
     font-size: 17px;
-    font-family: 'Open Sans Bold';
+    font-family: $open-sans;
     line-height: 24px;
+}
+
+.main-nav__item {
+    padding-top: 27px;
+    padding-bottom: 27px;
+    border-top: 1px solid $grey;
 }
