--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,1 +1,8 @@
 $black: #000;
+$white: #fff;
+$grey: #ececec;
+$grey-68: #444;
+$seashell: #f1f1f1;
+$downy: #63d1bb;
+$fountain: #56c3b2;
+$open-sans: 'Open Sans', 'Arial', sans-serif;
