--- a/sass/fonts.scss
+++ b/sass/fonts.scss
@@ -8,6 +8,6 @@
 @font-face {
     font-weight: 700;
     font-style: normal;
-    font-family: 'Open Sans Bold';
+    font-family: 'Open Sans';
     src: local('Open Sans Bold'), url(/fonts/opensansbold.woff2) format('woff2'), url(/fonts/opensansbold.woff) format('woff');
 }
