--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,17 @@
-@import 'fonts.scss';
 @import 'variables.scss';
-
-@import  'blocks/main-nav.scss';
+@import 'fonts.scss';
+@import 'titles.scss';
+@import 'text.scss';
+@import 'blocks/btn.scss';
+@import 'blocks/page-header.scss';
+@import 'blocks/main-nav.scss';
+@import 'blocks/page-main.scss';
+@import 'blocks/product-menu.scss';
+@import 'blocks/week-product.scss';
+@import 'blocks/advantages.scss';
+@import 'blocks/reviews.scss';
+@import 'blocks/contacts.scss';
+@import 'blocks/coopyright.scss';
+@import 'blocks/main-catalog.scss';
+@import 'blocks/form-order.scss';
+@import 'blocks/page-footer.scss';
