--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -1,7 +1,7 @@
 .page-main__title--warp-index {
   padding-top: 80px;
   height: 280px;
-  background-image: url(../img/hero-mobile@1x.jpg);
+  background-image: url("../img/hero-mobile@1x.jpg");
   background-position: center;
   background-repeat: no-repeat;
 }
