--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,12 +1,12 @@
-.reviews__item {
-  margin: 0;
-  padding: 0;
-}
-
-.reviews__author-name {
-  font-style: normal;
-}
-
-.reviews__author-email {
-  font-style: normal;
+.reviews {
+  &__item {
+    margin: 0;
+    padding: 0;
+  }
+  &__author-name {
+    font-style: normal;
+  }
+  &__author-email {
+    font-style: normal;
+  }
 }
