--- a/sass/blocks/week-product.scss
+++ b/sass/blocks/week-product.scss
@@ -1,17 +1,18 @@
-.week-product__title-description {
-  color: $downy;
-  text-transform: uppercase;
-  letter-spacing: 0;
-  font-weight: 700;
-  font-size: 17px;
-  font-family: $open-sans;
-  line-height: 20px;
-}
-
-.week-product__price {
-  color: $grey-68;
-  font-weight: 700;
-  font-size: 17px;
-  font-family: $open-sans;
-  line-height: 24px;
+.week-product {
+  &__title-description {
+    color: $downy;
+    text-transform: uppercase;
+    letter-spacing: 0;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: $open-sans;
+    line-height: 20px;
+  }
+  &__price {
+    color: $grey-68;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: $open-sans;
+    line-height: 24px;
+  }
 }
