--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -1,11 +1,23 @@
-.page-main__title {
+.title {
   color: $black;
   letter-spacing: 0;
   font-weight: 700;
   font-size: 27px;
   font-family: $open-sans;
   line-height: 30px;
+  &__wrap {
+    background-color: $seashell;
+  }
+  &__wrap--index {
+    padding-top: 80px;
+    height: 280px;
+    background-image: url("../img/hero-mobile@1x.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
+
+
 
 .page-subtitle {
   letter-spacing: 0;
