--- a/sass/blocks/form-order.scss
+++ b/sass/blocks/form-order.scss
@@ -1,4 +1,28 @@
+.form-order {
+  display: -webkit-flex;
+  display:     -ms-flex;
+  display:         flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-right: $mobile-padding;
+  padding-left: $mobile-padding;
+  width: $mobile-width;
+  @media (min-width: $tablet-width) {
+    padding-right: $tablet-padding;
+    padding-left: $tablet-padding;
+    width: $tablet-width;
+  }
+  @media (min-width: $desktop-width) {
+    width: $desktop-width;
+  }
+}
+
 .form-order__section {
+  display: -webkit-flex;
+display: -ms-flex;
+display: flex;
+
+  width: $mobile-width;
   border: none;
 
   &-title {
