--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -1,18 +1,37 @@
 .title {
+  margin: 0;
   color: $black;
+  text-align: center;
   letter-spacing: 0;
   font-weight: 700;
   font-size: 27px;
   font-family: $open-sans;
   line-height: 30px;
 
+
   &__wrap {
-    background-color: $seashell;
+    margin: 0 auto;
+
+    padding-right: $mobile-padding;
+    padding-left: $mobile-padding;
+    width: $mobile-width;
+    background-color: $alabaster;
+
+    @media (min-width: $tablet-width) {
+      padding-right: $tablet-padding;
+      padding-left: $tablet-padding;
+      width: $tablet-width;
+    }
+    @media (min-width: $desktop-width) {
+      padding-right: $desktop-padding;
+      padding-left: $desktop-padding;
+      width: $desktop-width;
+    }
   }
 
   &__wrap--index {
-    padding-top: 80px;
     height: 280px;
+
     background-image: url("../img/hero-mobile@1x.jpg");
     background-position: center;
     background-repeat: no-repeat;
