--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,25 +1,6 @@
 .contacts {
-  &__container {
-    margin: 0 auto;
-    width: $mobile-width;
-
-    @media (min-width: $tablet-width) {
-      padding-right: $tablet-padding;
-      padding-left: $tablet-padding;
-      width: $tablet-width;
-    }
-  }
-
-
   &__list {
-    display: -webkit-flex;
-    display:     -ms-flex;
-    display:         flex;
-    flex-direction: column;
-
     @media (min-width: $tablet-width) {
-      flex-direction: row;
-      justify-content: space-between;
     }
   }
 
@@ -31,5 +12,8 @@
   &__write {
     width: 100%;
     text-align: center;
+  }
+  &__location {
+    width: 320px;
   }
 }
