--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,18 +1,20 @@
 .main-nav {
-  display: -webkit-flex;
-  display:     -ms-flex;
-  display:         flex;
-  flex-direction: column;
-  margin: 0 auto;
-  margin-top: 40px;
-  width: $mobile-width;
+  margin-top: 30px;
+  & .container {
+    // padding-right: 0;
+    // padding-left: 0;
+  }
 
   @media (min-width: $tablet-width) {
+    display: -webkit-flex;
+    display:     -ms-flex;
+    display:         flex;
     flex-direction: row;
   }
 
 
   &__link {
+    margin-left: 74px;
     color: $black;
     text-decoration: none;
     letter-spacing: 0;
@@ -23,22 +25,9 @@
   }
 
   &__item {
-    padding-top: 27px;
+    padding-top: 26px;
     padding-bottom: 27px;
     border-top: 1px solid $grey;
-    text-align: center;
-  }
-  &__toggle {
-    margin-top: -30px;
-    width: 20px;
-    height: 14px;
-    border: none;
-    background-color: transparent;
-
-    align-self: flex-end;
-    @media (min-width: $tablet-width) {
-      display: none;
-    }
   }
   &__user-menu {
     @media (min-width: $tablet-width) {
