--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,28 +1,15 @@
 .page-footer {
-  &__container {
-    display: -webkit-flex;
-    display:     -ms-flex;
-    display:         flex;
-    flex-direction: column;
-    margin: 0 auto;
-    width: $mobile-width;
+  & .container {
     background-color: $seashell;
 
     @media (min-width: $tablet-width) {
+      display: -webkit-flex;
+      display:     -ms-flex;
+      display:         flex;
       flex-direction: row;
       justify-content: space-between;
-      padding-right: $tablet-padding;
-      padding-left: $tablet-padding;
-      width: $tablet-width;
-    }
-
-    @media (min-width: $desktop-width) {
-      padding-right: $desktop-padding;
-      padding-left: $desktop-padding;
-      width: $desktop-width;
     }
   }
-
   &__logo {
     display: none;
 
