--- a/sass/blocks/product-menu.scss
+++ b/sass/blocks/product-menu.scss
@@ -1,21 +1,7 @@
 .product-menu {
-  &__container {
-    @media (min-width: $mobile-width) {
-      margin: 0 auto;
-      width: $mobile-width;
-    }
-
-    @media (min-width: $tablet-width) {
-      padding-right: $tablet-padding;
-      padding-left: $tablet-padding;
-      width: $tablet-width;
-    }
-
-    @media (min-width: $desktop-width) {
-      padding-right: $desktop-padding;
-      padding-left: $desktop-padding;
-      width: $desktop-width;
-    }
+  & .container {
+    padding-right: 0;
+    padding-left: 0;
   }
 
   &__list {
