--- a/sass/blocks/site-menu.scss
+++ b/sass/blocks/site-menu.scss
@@ -7,7 +7,11 @@
   padding: 0;
   list-style: none;
 
+
   @media (min-width: $tablet-width) {
+    display: -webkit-flex;
+    display:     -ms-flex;
+    display:         flex;
     flex-direction: row;
   }
 }
