--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -1,37 +1,27 @@
-.title {
-  margin: 0;
-  color: $black;
-  text-align: center;
-  letter-spacing: 0;
-  font-weight: 700;
-  font-size: 27px;
-  font-family: $open-sans;
-  line-height: 30px;
-
-
-  &__wrap {
-    margin: 0 auto;
-
-    padding-right: $mobile-padding;
-    padding-left: $mobile-padding;
-    width: $mobile-width;
-    background-color: $alabaster;
-
-    @media (min-width: $tablet-width) {
-      padding-right: $tablet-padding;
-      padding-left: $tablet-padding;
-      width: $tablet-width;
-    }
-    @media (min-width: $desktop-width) {
-      padding-right: $desktop-padding;
-      padding-left: $desktop-padding;
-      width: $desktop-width;
-    }
+.page-title {
+  &__text {
+    margin: 0;
+    color: $black;
+    text-align: center;
+    letter-spacing: 0;
+    font-weight: 700;
+    font-size: 27px;
+    font-family: $open-sans;
+    line-height: 30px;
   }
 
-  &__wrap--index {
-    height: 280px;
+  & .container {
+    background-color: $alabaster;
+  }
 
+  & .page-title__container--index {
+    background-color: transparent;
+  }
+
+  &--index {
+    margin: 0 auto;
+    height: 280px;
+    background-color: transparent;
     background-image: url("../img/hero-mobile@1x.jpg");
     background-position: center;
     background-repeat: no-repeat;
