--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -1,4 +1,5 @@
 .reviews {
+  margin-bottom: 90px;
   & .container {
     display: -webkit-flex;
     display:     -ms-flex;
@@ -15,6 +16,7 @@
   }
 
   &__title {
+    padding-bottom: 4px;
     @media(min-width: $tablet-width) {
       order: 1;
     }
@@ -29,27 +31,53 @@
   &__item {
     margin: 0;
     padding: 0;
+    padding-bottom: 25px;
+    letter-spacing: 0;
+    font-weight: 400;
+    font-size: 15px;
+    font-family: $open-sans;
+    line-height: 30px;
   }
 
   &__author-name {
+    display: block;
+    padding-bottom: 8px;
     font-style: normal;
   }
 
   &__author-email {
+    display: block;
+    padding-bottom: 28px;
+    letter-spacing: 0;
+    font-weight: 400;
     font-style: normal;
+    font-size: 17px;
+    line-height: 30px;
   }
 
   &__nav {
     display: -webkit-flex;
     display:     -ms-flex;
     display:         flex;
+    padding-bottom: 40px;
     @media (min-width: $tablet-width) {
       order: 4;
     }
+    &--icon {
+      position: absolute;
+      top: 12px;
+      left: 40px;
+    }
   }
 
+
+
   &__button {
+    position: relative;
+    padding: 25px 0;
     width: 130px;
+    border: 1px solid $grey;
+    background-color: transparent;
   }
 
   &__write {
