--- a/sass/blocks/week-product.scss
+++ b/sass/blocks/week-product.scss
@@ -1,4 +1,5 @@
 .week-product {
+  margin-bottom: 70px;
   & .container {
     @media (min-width: $mobile-width) {
       margin: 0 auto;
@@ -19,6 +20,7 @@
   }
 
   &__title {
+    padding-bottom: 8px;
     @media( min-width: $tablet-width) {
       display: -webkit-flex;
       display:     -ms-flex;
@@ -33,6 +35,8 @@
     display: -webkit-flex;
     display:     -ms-flex;
     display:         flex;
+    margin: 0;
+    padding: 0;
     color: $downy;
     text-transform: uppercase;
     letter-spacing: 0;
@@ -43,7 +47,12 @@
 
     flex-wrap: wrap;
   }
-
+  & .page-subtitle {
+    margin: 0;
+    padding: 0;
+    padding-top: 22px;
+    padding-bottom: 9px;
+  }
   &__description {
     display: -webkit-flex;
     display:     -ms-flex;
@@ -52,6 +61,7 @@
   }
 
   &__image {
+    margin-bottom: 23px;
     @media (min-width: $tablet-width) {
       margin-top: -204px;
       width: 334px;
@@ -63,6 +73,7 @@
 
   &__price {
     display: block;
+    margin-bottom: 29px;
     color: $grey-68;
     font-weight: 700;
     font-size: 17px;
@@ -81,4 +92,8 @@
       width: auto;
     }
   }
+}
+
+.week-product-description-text {
+  padding-bottom: 5px;
 }
