--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -20,6 +20,7 @@
 
   &--index {
     margin: 0 auto;
+    padding-top: 70px;
     height: 280px;
     background-color: transparent;
     background-image: url("../img/hero-mobile@1x.jpg");
