--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,3 +20,4 @@
 @import "blocks/production-view.scss";
 @import "blocks/form-order.scss";
 @import "blocks/page-footer.scss";
+@import "blocks/social.scss";
