--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -1,4 +1,5 @@
 .contacts {
+  margin-bottom: 42px;
   &__list {
     padding-bottom: 10px;
     @media (min-width: $tablet-width) {
@@ -19,11 +20,17 @@
   }
 
   &__write {
-    width: 100%;
+    display: block;
+    margin: 0 auto;
+    width: 260px;
     text-align: center;
   }
   &__location {
-    width: 320px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 39px;
+    line-height: 0;
   }
   & .page-subtitle {
     padding-bottom: 6px;
