--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@
 @import "blocks/contacts.scss";
 @import "blocks/coopyright.scss";
 @import "blocks/product-preview.scss";
-@import "blocks/production-view.scss";
+@import "blocks/production.scss";
 @import "blocks/form-order.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
