--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -1,7 +1,7 @@
 .advantages {
   margin-bottom: 37px;
   & .page-subtitle {
-    margin-bottom: 60px;
+    margin-bottom: 55px;
   }
   &__list {
     margin: 0;
@@ -27,7 +27,12 @@
   &__item {
     position: relative;
     padding-top: 30px;
-    padding-bottom: 52px;
+    padding-bottom: 53px;
+    letter-spacing: 0;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: $open-sans;
+    line-height: 20px;
     &:last-child {
       padding-bottom: 0;
     }
