--- a/sass/blocks/product-preview.scss
+++ b/sass/blocks/product-preview.scss
@@ -4,6 +4,7 @@
   display:         flex;
   flex-direction: column;
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
   list-style: none;
 
@@ -15,6 +16,8 @@
   }
 
   &__item {
+    margin-bottom: 30px;
+    border: 1px solid $grey;
     @media (min-width: $tablet-width) {
       display: -webkit-flex;
       display:     -ms-flex;
@@ -25,6 +28,23 @@
       flex-direction: column;
     }
   }
+  &__info {
+    padding-bottom: 16px;
+    width: 230px;
+  }
+
+  &__buy {
+    position: relative;
+    display: -webkit-flex;
+    display:     -ms-flex;
+    display:         flex;
+    justify-content: space-between;
+    margin-left: 28px;
+    padding-top: 22px;
+    padding-bottom: 27px;
+    width: 205px;
+    border-top: 1px solid $grey;
+  }
 
   &__price {
     letter-spacing: 0;
@@ -34,7 +54,11 @@
     line-height: 24px;
   }
 
-  &__info {
+  &__value {
+    display: block;
+    margin: 0;
+    padding: 0;
+    padding-left: 28px;
     font-weight: 400;
     font-size: 13px;
     font-family: $open-sans;
@@ -42,7 +66,25 @@
   }
 
   &__title {
-    margin-bottom: 5px;
+    position: relative;
+    margin: 0;
     padding: 0;
+    padding-top: 22px;
+    padding-bottom: 5px;
+    padding-left: 28px;
+    font-weight: 700;
+    font-size: 17px;
+    font-family: $open-sans;
+    line-height: 24px;
   }
+}
+
+.product-preview__add-to-basket {
+  &--icon-cart {
+    fill: $downy;
+  }
+}
+
+.product-preview__title-icon {
+  position: absolute;
 }
