--- a/sass/titles.scss
+++ b/sass/titles.scss
@@ -8,6 +8,14 @@
     font-size: 27px;
     font-family: $open-sans;
     line-height: 30px;
+    @media(min-width: $tablet-width) {
+      font-size: 43px;
+      line-height: 50px;
+    }
+    @media(min-width: $desktop-width) {
+      font-size: 53px;
+      line-height: 57px;
+    }
   }
 
   & .container {
@@ -35,14 +43,6 @@
   &--catalog {
     margin-bottom: 34px;
   }
-
-  .page-subtitle {
-    letter-spacing: 0;
-    font-weight: 700;
-    font-size: 25px;
-    font-family: $open-sans;
-    line-height: 30px;
-  }
 }
 .subtitle {
   color: $black;
@@ -51,4 +51,25 @@
   font-size: 17px;
   font-family: $open-sans;
   line-height: 20px;
+  @media(min-width: $tablet-width) {
+    font-size: 15px;
+    line-height: 30px;
+  }
+}
+
+.page-subtitle {
+  letter-spacing: 0;
+  font-weight: 700;
+  font-size: 25px;
+  font-family: $open-sans;
+  line-height: 30px;
+  @media(min-width: $tablet-width) {
+    margin-bottom: 72px;
+    font-size: 43px;
+    line-height: 50px;
+    @media(min-width: $desktop-width) {
+      font-size: 53px;
+      line-height: 57px;
+    }
+  }
 }
