--- a/sass/blocks/product-preview.scss
+++ b/sass/blocks/product-preview.scss
@@ -13,6 +13,7 @@
 
   @media(min-width: $desktop-width) {
     flex-direction: row;
+    justify-content: space-between;
   }
 
   &__item {
@@ -22,17 +23,41 @@
       display: -webkit-flex;
       display:     -ms-flex;
       display:         flex;
+      align-items: flex-start;
+      margin-bottom: 50px;
     }
 
     @media (min-width: $desktop-width) {
       flex-direction: column;
     }
   }
-  &__info {
-    padding-bottom: 16px;
-    width: 230px;
+  &__wrapper {
+    @media(min-width: $tablet-width) {
+      display: -webkit-flex;
+      display:     -ms-flex;
+      display:         flex;
+      flex-direction: column;
+    }
   }
-
+  &__info {
+    margin-top: 22px;
+    margin-left: 28px;
+    padding-bottom: 22px;
+    @media (min-width: $tablet-width) {
+      margin-top: 27px;
+      width: 240px;
+    }
+  }
+  &__img {
+    @media(min-width: $tablet-width) {
+      width: 333px;
+      height: 334px;
+    }
+    @media(min-width: $desktop-width) {
+      width: 316px;
+      height: 462px;
+    }
+  }
   &__buy {
     position: relative;
     display: -webkit-flex;
@@ -41,9 +66,13 @@
     justify-content: space-between;
     margin-left: 28px;
     padding-top: 22px;
-    padding-bottom: 27px;
+    padding-bottom: 26px;
     width: 205px;
     border-top: 1px solid $grey;
+    @media(min-width: $tablet-width) {
+      // margin-top: 164px;
+      width: 275px;
+    }
   }
 
   &__price {
@@ -52,30 +81,35 @@
     font-size: 15px;
     font-family: $open-sans;
     line-height: 24px;
+    @media(min-width: $tablet-width) {
+      font-size: 17px;
+      line-height: 24px;
+    }
   }
 
   &__value {
-    display: block;
-    margin: 0;
-    padding: 0;
-    padding-left: 28px;
     font-weight: 400;
     font-size: 13px;
     font-family: $open-sans;
     line-height: 30px;
+
+    @media(min-width: $tablet-width) {
+      font-size: 15px;
+      line-height: 30px;
+    }
   }
 
   &__title {
     position: relative;
     margin: 0;
-    padding: 0;
-    padding-top: 22px;
-    padding-bottom: 5px;
-    padding-left: 28px;
     font-weight: 700;
     font-size: 17px;
     font-family: $open-sans;
     line-height: 24px;
+    @media(min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 24px;
+    }
   }
 }
 
