--- a/sass/blocks/production.scss
+++ b/sass/blocks/production.scss
@@ -1,14 +1,18 @@
 .production {
   margin-bottom: 38px;
-  padding-bottom: 20px;
-  &__container {
-    display: -webkit-flex;
-    display:     -ms-flex;
-    display:         flex;
-    flex-direction: column;
-
+  & .container {
+    @media(min-width: $tablet-width) {
+      display: -webkit-flex;
+      display:     -ms-flex;
+      display:         flex;
+      flex-direction: column;
+    }
     @media (min-width: $desktop-width) {
       flex-direction: row;
+      align-items: flex-start;
+
+      flex-wrap: wrap;
+
     }
   }
   &__title {
@@ -25,11 +29,33 @@
     font-size: 17px;
     font-family: $open-sans;
     line-height: 24px;
+    @media(min-width: $tablet-width) {
+      padding-top: 38px;
+      padding-left: 105px;
+      font-size: 20px;
+      line-height: 24px;
+
+      order: 2;
+    }
   }
 }
 
 .production__video {
   margin-bottom: 25px;
+  @media(min-width: $tablet-width) {
+    margin-bottom: 0;
+    width: 668px;
+    height: 455px;
+    border: 1px solid red;
+
+    order: 1;
+  }
+  @media (min-width: $desktop-width) {
+    width: 682px;
+    height: 455px;
+
+    flex-shrink: 0;
+  }
 }
 
 .production__descripion {
@@ -37,6 +63,9 @@
   border-right: 1px solid $grey;
   border-bottom: 1px solid $grey;
   border-left: 1px solid $grey;
+  @media(min-width: $tablet-width) {
+    order: 3;
+  }
   &-text {
     padding-bottom: 10px;
     padding-left: 35px;
@@ -46,6 +75,15 @@
     font-size: 13px;
     font-family: $open-sans;
     line-height: 24px;
+    @media(min-width: $tablet-width) {
+      margin-top: 10px;
+      margin-right: 20px;
+      margin-bottom: 25px;
+      padding-left: 40px;
+      width: 620px;
+      font-size: 15px;
+      line-height: 30px;
+    }
   }
   &-img {
     margin-bottom: 10px;
@@ -56,6 +94,9 @@
     margin: 0 auto;
     width: 190px;
     text-align: center;
+    @media(min-width: $tablet-width) {
+      width: 580px;
+    }
   }
 }
 
