--- a/sass/blocks/reviews.scss
+++ b/sass/blocks/reviews.scss
@@ -5,18 +5,24 @@
     display:     -ms-flex;
     display:         flex;
     flex-direction: column;
-    margin: 0 auto;
-    width: $mobile-width;
+
 
     @media (min-width: $tablet-width) {
       flex-direction: row;
       align-items: flex-start;
-      width: $tablet-width;
+      justify-content: space-between;
+
+      flex-wrap: wrap;
+    }
+    @media(min-width: $desktop-width) {
+      padding-left: 222px;
     }
   }
 
   &__title {
     @media(min-width: $tablet-width) {
+      margin-bottom: 47px;
+
       order: 1;
     }
   }
@@ -36,12 +42,22 @@
     font-size: 15px;
     font-family: $open-sans;
     line-height: 30px;
+    @media(min-width: $tablet-width) {
+      margin-bottom: 30px;
+      font-size: 17px;
+      line-height: 31px;
+    }
   }
 
   &__author-name {
     display: block;
-    padding-bottom: 8px;
+    margin-bottom: 8px;
     font-style: normal;
+    @media(min-width: $tablet-width) {
+      margin-bottom: 5px;
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 
   &__author-email {
@@ -58,8 +74,12 @@
     display: -webkit-flex;
     display:     -ms-flex;
     display:         flex;
-    padding-bottom: 40px;
+    margin-bottom: 40px;
     @media (min-width: $tablet-width) {
+      margin-top: -85px;
+      margin-right: 25px;
+      margin-left: auto;
+
       order: 4;
     }
     &--icon {
@@ -77,14 +97,20 @@
     width: 130px;
     border: 1px solid $grey;
     background-color: transparent;
+    @media(min-width: $tablet-width) {
+      padding-right: 19px;
+      padding-left: 18px;
+      width: 85px;
+      border: none;
+    }
   }
 
   &__write {
-    width: 100%;
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      width: 167px;
+      margin-top: 38px;
+      width: 175px;
 
       order: 2;
     }
